fix: alignment issue between enrolled and recommended courses section
VAN-1187

--- a/src/containers/Dashboard/index.scss
+++ b/src/containers/Dashboard/index.scss
@@ -2,7 +2,6 @@
 
 .course-list-column {
   padding: 0 map-get($spacers, 4);
-  margin: auto;
 }
 
 .sidebar-column {
